--- a/app/src/main/res/drawable/ic_no_completed_list.xml
+++ b/app/src/main/res/drawable/ic_no_completed_list.xml
@@ -733,7 +733,7 @@
       android:fillAlpha="0.5"/>
   <path
       android:pathData="M202.21,332.38l-1.77,4.55 -1.85,15.39 -4.46,1.41s-0.38,-9.26 -0.19,-15.48a15.91,15.91 0,0 1,0.92 -4.88l1.25,-3.5Z"
-      android:fillColor="#ffa8a7"/>
+      android:fillColor="#704B4B"/>
   <path
       android:pathData="M208.66,314.53l-5.61,1.61L202,331.83v16.05s3.49,3 11.78,3a17.3,17.3 0,0 0,10.46 -3.79V326.91c0,-1.81 0.72,-12.18 -7.17,-14l-1.35,0.27Z"
       android:fillColor="#888990"/>
